--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^14.3.0",
+    "eslint-plugin-cypress": "^4.2.1",
+    "typescript": "^5.8.3"
   }
 }
